Add visibility to display new book in HTML

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
     </section>
   </main>
 
+  <!-- <p>The lord of the rings</p> -->
+
   <form action="" id="form">
     <input id="title" type="text" placeholder="Title">
     <input id="author" type="text" placeholder="Author">
 
     <button type="submit">Add</button>
   </form>
+
+  <script src="main.js"></script>
   
 </body>
 </html>
