--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <input id="title" type="text" placeholder="Title">
     <input id="author" type="text" placeholder="Author">
 
-    <button type="submit">Add</button>
+    <button id="add" type="submit">Add</button>
   </form>
 
   <script src="main.js"></script>
