--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <section class="books" id="bookSection"></section>
 
-      <form action="" id="form">
+      <form id="form">
         <input id="title" type="text" placeholder="Title" />
         <input id="author" type="text" placeholder="Author" />
 
