Add class and function for project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Awesome Books</title>
   </head>
   <body>
-    <h1>Awesome books</h1>
+    <h1>All Awesome books</h1>
 
     <main>
       <section class="books" id="bookSection"></section>
