--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Awesome Books</title>
   </head>
   <body>
-    <h1>All Awesome books</h1>
-
     <main>
-      <section class="books" id="bookSection"></section>
+      <section class="books" id="bookSection">
+        <h1>All Awesome books</h1>
+        <div class="box"></div>
+      </section>
+      <section class="add-book">
+        <div class="line"></div>
+        <h2>Add a new Book</h2>
+        <form id="form">
+          <input id="title" type="text" placeholder="Title" />
+          <input id="author" type="text" placeholder="Author" />
 
-      <form id="form">
-        <input id="title" type="text" placeholder="Title" />
-        <input id="author" type="text" placeholder="Author" />
-
-        <button id="add" type="submit">Add</button>
-      </form>
+          <button id="add" type="submit">Add</button>
+        </form>
+      </section>
     </main>
 
     <script src="main.js"></script>
