--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
   </head>
   <body>
     <main>
+
+      <nav class="navigation">
+        <p>Awesome Books</p>
+        <ul class="menu">
+          <li class="list title">List</li>
+          <li class="line"></li>
+          <li class="add-new title">Add new</li>
+          <li class="line"></li>
+          <li class="contact title">Contact</li>
+        </ul>
+      </nav>
+
+      <p class="date">May 26th 2022, 11:34:14 am</p>
+
       <section class="books" id="bookSection">
         <h1>All Awesome books</h1>
         <div class="box"></div>
       </section>
+      
       <section class="add-book">
         <div class="line"></div>
         <h2>Add a new Book</h2>
@@ -23,7 +38,22 @@
           <button id="add" type="submit">Add</button>
         </form>
       </section>
+
+      <section class="contact">
+        <h2>Contact Information</h2>
+        <p>Do you have any questions or you justs want to say "Hello"?<br>You can reach out to us!</p>
+        <ol>
+          <li>Our e-mail: awesomebooks@gmail.com</li>
+          <li>Our phone number: 004352781</li>
+          <li>Our address C.K Kentucky 23, 87465 Sydney, Australia</li>
+        </ol>
+      </section>
+
     </main>
+
+    <footer class="footer">
+      <p>Copyright </p>
+    </footer>
 
     <script src="main.js"></script>
   </body>
