Add javascript to the page to add and remove the different sections whne clicking in the navigation menu

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </form>
       </section>
 
-      <section class="contact">
+      <section class="contact-section">
         <h2>Contact Information</h2>
         <div class="contact-data">
           <p>
